# IterativeSurenessTester

./: .gitignore  Manifest.toml  README.md  bap.py  hyperblock_intervals_iris_full.md  iris_all_data_hb_stage2_pipeline.py  iris_exclude_hb_union.py  merge_converged_fit_hb_dv.py  plot_parallel_hb_coverage.py  rebuild.py  report_merged_hb_coverage.py  requirements.txt  tester.py
data/: fisher_iris.csv  fisher_iris_without_setosa.csv
examples/configs/: config_iris.toml  config_iris_cv.toml  config_iris_cv_hb.toml  config_iris_without_setosa_cv_hb.toml  config_mnist.toml
hyperblock/: __init__.py  hb_dv.py
working_version/: .gitignore  Project.toml  README.md  bap.jl  config_iris_hb.toml  config_mnist.toml  hb_viscanvas.py  iris_all_data_hb_stage2_pipeline.py  plot_parallel_hb_coverage.py  pyproject.toml
working_version/docs/: Bidirectional Active Processing.md  hb_classifier.md
