[project]
name = "BAP"
version = "0.1.0"
description = "Bidirectional Active Processing spec-driven development implementation"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
toml = ["tomli>=2.0"]  # for Python 3.10; 3.11+ has tomllib built-in
